@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Version=1.0
+Icon=rxvt
+Type=X-XFCE-Helper
+_Name=RXVT Unicode
+StartupNotify=false
+X-XFCE-Binaries=urxvt;
+X-XFCE-Category=TerminalEmulator
+X-XFCE-Commands=%B;
+X-XFCE-CommandsWithParameter=%B -e %s;
