@@ -58,6 +58,7 @@ exo-helper/helpers/opera-mailer.desktop.in.in
 exo-helper/helpers/sylpheed.desktop.in.in
 exo-helper/helpers/sylpheed-claws.desktop.in.in
 exo-helper/helpers/thunderbird.desktop.in.in
+exo-helper/helpers/urxvt.desktop.in.in
 exo-helper/helpers/xterm.desktop.in.in
 
 exo-open/main.c
