@@ -1,6 +1,12 @@
+2006-08-14  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in: Add new files here.
+	* libexo-0.3.pot, *.po: Merge new strings.
+	* de.po: Update german translations.
+
 2006-08-08  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2006-08-08  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
