@@ -1,3 +1,12 @@
+2006-08-14	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/helpers/urxvt.desktop.in.in,
+	  exo-helper/helpers/Makefile.am: Add support for rxvt-unicode.
+	  Bug #2158.
+	* po/POTFILES.in: Add new files here.
+	* po/libexo-0.3.pot, po/*.po: Merge new strings.
+	* po/de.po: Update german translations.
+
 2006-08-09	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-tree-view.c: Add support for rubberband selection in the
